# embedding-server

./: Cargo.toml  README.md
crates/libs/lib-ai/: Cargo.toml
crates/libs/lib-ai/src/: error.rs  lib.rs
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: bearer.rs  config.rs  error.rs  lib.rs  token.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  ctx.rs  database.rs  error.rs  lib.rs
crates/libs/lib-core/src/_dev_utils/: mod.rs
crates/libs/lib-core/src/model/: file_chunks.rs  files.rs  mod.rs  user.rs
crates/libs/lib-cron/: Cargo.toml
crates/libs/lib-cron/src/: config.rs  db_operations.rs  error.rs  lib.rs
crates/libs/lib-embedding/: Cargo.toml
crates/libs/lib-embedding/src/: dtype.rs  error.rs  lib.rs
crates/libs/lib-embedding/src/candle/: alibi.rs  compute_cap.rs  mod.rs
crates/libs/lib-embedding/src/candle/layers/: cublaslt.rs  layer_norm.rs  linear.rs  mod.rs  rms_norm.rs  rotary.rs
crates/libs/lib-embedding/src/candle/models/: bert.rs  dense.rs  distilbert.rs  flash_bert.rs  flash_distilbert.rs  flash_gte.rs  flash_mistral.rs  flash_nomic.rs  flash_qwen3.rs  gemma3.rs  gte.rs  mistral.rs  mod.rs  nomic.rs  qwen3.rs
crates/libs/lib-embedding/src/core/: mod.rs
crates/libs/lib-embedding/src/ort/: mod.rs
crates/libs/lib-storage/: Cargo.toml
crates/libs/lib-storage/src/: config.rs  error.rs  lib.rs
crates/libs/lib-storage/src/functions/: bucket.rs
crates/libs/lib-storage/src/functions.rs/: bucket.rs  file.rs
crates/libs/lib-telemetry/: Cargo.toml
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: base64.rs  envs.rs  error.rs  lib.rs  time.rs
crates/services/api-service/: Cargo.toml
crates/services/api-service/src/: config.rs  error.rs  http_types.rs  main.rs
crates/services/api-service/src/ai/: download.rs  infer.rs  mod.rs  queue.rs  tokenization.rs
crates/services/api-service/src/cache/: mod.rs
crates/services/api-service/src/log/: mod.rs
crates/services/api-service/src/middleware/: mod.rs  mw_auth.rs  mw_response.rs
crates/services/api-service/src/routes/: cron.rs  embed.rs  mod.rs
sql/: 00-init.sql  01-schema.sql  02-seed.sql
