[workspace.lints.rust]

[workspace]
resolver = "2"
members = ["crates/libs/lib-embedding", "crates/libs/lib-telemetry", "crates/libs/lib-auth", "crates/libs/lib-cron", "crates/libs/lib-core", "crates/libs/lib-utils", "crates/services/api-service", "crates/libs/lib-storage"]

[workspace.dependencies]
