[package]
name = "lib-ai"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- App Libs
lib-core = { path = "../lib-core"}

candle-transformers = "0.9.1"
candle-onnx = "0.9.1"
candle-nn = "0.9.1"
candle-core = "0.9.1"
hf-hub = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.21.4"
tokio = {version="1.44.2", features=["macros", "signal", "sync", "rt-multi-thread", "fs"]}