[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- App Libs
lib-auth = { path = "../lib-auth"}
lib-utils = { path = "../lib-utils"}

# -- DB & Serialization
chrono = {version="0.4.40", features=["serde"]}
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = {version="3.12.0", features = ["chrono"]}
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "macros", "uuid", "json"] }
pgvector = { version = "0.4", features = ["sqlx", "postgres", "serde"] }

# -- Runntime & Tracing
tokio = "1.44.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
serial_test = "3.2.0"

[lints]
workspace = true