[package]
name = "lib-cron"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-storage = { path = "../lib-storage"}
lib-ai = { path = "../lib-ai"}

uuid = {version = "1.16.0", features = ["v4"]}
chrono = "0.4.40"
tokio-cron-scheduler = {version="0.14.0", features=["signal"]}
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = {version="1.44.2", features=["macros", "rt-multi-thread", "fs"]}
async-trait = "0.1.88"
futures-util = "0.3.31"
reqwest = "0.12.23"

[lints]
workspace = true