[package]
name = "lib-cron"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-storage = { path = "../lib-storage"}
lib-embedding = { path = "../lib-embedding"}
lib-utils = {path = "../lib-utils"}
lib-core = {path = "../lib-core"}

uuid = {version = "1.16.0", features = ["v4"]}
chrono = "0.4.40"
tokio-cron-scheduler = {version="0.14.0", features=["signal"]}
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = {version="1.44.2", features=["macros", "rt-multi-thread", "fs"]}
async-trait = "0.1.88"
futures-util = "0.3.31"
reqwest = "0.12.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
aws-sdk-s3 = "1.83.0"
candle-core = "0.9.1"
fastrand = "2.3.0"
regex = "1.11.1"
tracing = "0.1.41"
[lints]
workspace = true