[package]
name = "lib-embedding"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- App Libs
lib-core = { path = "../lib-core"}
nohash-hasher = "0.2.0"
ndarray = "0.16.1"
candle-core = {version="0.9.1", features=[] }
candle-nn = "0.9.1"
candle-transformers = { version = "0.9.1" }
candle-flash-attn = { version = "0.9.1", optional = true}
candle-flash-attn-v1 = { version = "0.0.1", optional = true }
candle-cublaslt = { version = "0.0.1", optional = true }
candle-layer-norm = { version = "0.0.1", optional = true }
candle-rotary = { version = "0.0.1", optional = true }
clap = "4.5.48"
hf-hub = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.21.4"
tracing = "0.1.41"
tokio = {version="1.44.2", features=["macros", "signal", "sync", "rt-multi-thread", "fs"]}
accelerate-src = "0.3.2"
intel-mkl-src = { version = "0.8.1", optional = true }
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "download-binaries", "half", "onednn", "ndarray"] }
ort-sys = { version = "=2.0.0-rc.10", default-features = false }
num_cpus = "1.17.0"
rand = "0.9.2"


[features]
metal = ["candle-core/metal", "candle-nn/metal"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "dep:candle-cublaslt", "dep:candle-layer-norm", "dep:candle-rotary"]
flash-attn-v1 = ["dep:candle-flash-attn-v1", "cuda"]
flash-attn = ["dep:candle-flash-attn", "cuda"]
candle = []
ort = []