[package]
name = "lib-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- App Libs
lib-utils = { path = "../lib-utils"}

# -- Storage AWS
aws-credential-types = "1.2.3"
aws-sdk-s3 = "1.83.0"
aws-config = "1.6.2"

tokio = {version="1.44.2", features=["macros", "rt-multi-thread", "fs"]}

serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"

[lints]
workspace = true